--- a/src/App.css
+++ b/src/App.css
@@ -137,8 +137,29 @@ select {
   transform: scale(1.5);
 }
 */
-@media only screen and (max-width:599px) {
-  body {
-    width: 20em;
+@media screen and (max-width:599px) {
+  header {
+    white-space: nowrap;
+    font-size: 5vw;
   }
+  form{
+    margin: 2%;
+    display: flex;
+    flex-direction: column;
+  }
+  .input-area {
+    display: flex;
+    justify-content: center;
+  }
+  .todo-input {
+    width: 70vw;
+  }
+  .select {
+    margin: 2vw;
+    max-width: 100%　!important;;
+  }
+  .todo-item {
+    overflow-wrap: anywhere;
+  }
+  
   }
